--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -36,7 +36,7 @@
         <header class="container">
             <div class="row pt-5">
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                    <h2 class="text-center">kissinchile.cl</h2>
+                    <h2 class="text-center">KISSINCHILE.cl</h2>
                     <h1 class="text-center mt-3 mb-5">JAVIER RAMÍREZ</h1>
                     <p class="lead text-center">Este sitio Web permitirá visualizar y conocer la experiencia de kisseros en Chile junto a las historias, fotos y anécdotas.</p>
                 </div>
@@ -49,25 +49,25 @@
                     <h3 class="text-center my-5">Arquetipos de Usuarios</h3>
                     <div class="row">
                         <div class="col-sm-4 text-center">
-                            <img src="img/proto-persona-1.png" class="rounded-circle w-75 mb-3" />
-                            <h4 class="fs-5">Nombre</h4>
-                            <p>Breve descripción de lo que busca, cuándo lo busca y qué tecnología usa en su búsqueda.</p>
+                            <img src="img/proto1.png" class="rounded-circle w-100 mb-3" />
+                            <h4 class="fs-5">Joven Rockero</h4>
+                            <p>Esta obsesionado con el rock de los 70 y 80 piensa que ahi fueron los años dorados de la música y quiere rescatar todo lo que puede de esa epoca.</p>
                         </div>
                         <div class="col-sm-4 text-center">
-                            <img src="img/proto-persona-2.png" class="rounded-circle w-75 mb-3" />
-                            <h4 class="fs-5">Nombre</h4>
-                            <p>Breve descripción de lo que busca, cuándo lo busca y qué tecnología usa en su búsqueda.</p>
+                            <img src="img/proto2.png" class="rounded-circle w-100 mb-3" />
+                            <h4 class="fs-5">Fan Promedio</h4>
+                            <p>Siente una deuda que espera poder saldar teniendo muchas experiencias de rock, KISS es la que más le atrae, ya que es diferente y existe mucho por explorar.</p>
                         </div>
                         <div class="col-sm-4 text-center">
-                            <img src="img/proto-persona-3.png" class="rounded-circle w-75 mb-3" />
-                            <h4 class="fs-5">Nombre</h4>
-                            <p>Breve descripción de lo que busca, cuándo lo busca y qué tecnología usa en su búsqueda.</p>
+                            <img src="img/proto3.png" class="rounded-circle w-100 mb-3" />
+                            <h4 class="fs-5">Fan Experto</h4>
+                            <p>Es rockero de toda la vida, conocio a kiss de chico y lo sigue de toda la vida. Tiene una coleccion, libros y experiencia, asiste a cada concierto que puede.</p>
                         </div>
                     </div>
 
                     <h3 class="text-center mt-5 mb-4">Moodboard</h3>
 
-                    <img src="img/moodboard.jpg" class="w-100 border border-light border-4" alt="Describa el Mood en el Board" />
+                    <img src="img/moodboard-final.jpg" class="w-100 border border-light border-4" alt="MoodBoard de referentes web y la estetica del grupo" />
 
                     <h3 class="text-center mt-5 mb-4">Boceto de portada</h3>
 
@@ -134,19 +134,16 @@
                 <div class="col-12">
                     <p class="d-flex justify-content-between small p-1 m-0">
                         <!--reemplaza el # que sigue con el dominio definitivo-->
-                        <a href="#">Dominio Definitivo</a>
+                        <a href="www.kissinchile.cl">KISSINCHILE</a>
                         <!--reemplaza el # que sigue con vínculo a tu propio GitHub-->
-                        <a href="#" class="d-none d-lg-inline">Nombre Apellido © 2021</a>
+                        <a href="https://github.com/Rama2432/DNO-final" class="d-none d-lg-inline">Javier Ramírez © 2021</a>
                     </p>
                 </div>
             </div>
         </footer>
 
         <script>
-            // Reemplaza los colores dentro del paréntesis cuadrado, respetando las comillas.
-            // Si necesitas que un color ocupe más espacio en la paleta: debes repetirlo.
-            var colores = ["#B49D89", "#E2C4B6", "#C3CEB8", "#FAFAFA", "#FAFAFA"];
-            // No reemplaces nada de lo que sigue.
+            var colores = ["#B20000", "#cda400", "#B25100", "#8F0051", "#444444"];
             var n = colores.length;
             var w = 100 / n;
             for (var x = 0; x < n; x++) {
