--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -5,12 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
         <title>Style Guide | Dominio Definitivo</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet" /> -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Raleway:wght@600&display=swap" rel="stylesheet">
         <style>
             :root {
-                --bs-font-sans-serif: "Space Grotesk", sans-serif;
+                --bs-font-sans-serif: "Lato", sans-serif;
             }
             body {
                 background: #eee;
@@ -25,6 +28,7 @@
             h3,
             h5,
             h6 {
+                font-family: "Raleway", sans-serif;
                 font-weight: 700;
             }
             .card {
@@ -49,18 +53,18 @@
                     <h3 class="text-center my-5">Arquetipos de Usuarios</h3>
                     <div class="row">
                         <div class="col-sm-4 text-center">
-                            <img src="img/proto1.png" class="rounded-circle w-100 mb-3" />
-                            <h4 class="fs-5">Joven Rockero</h4>
+                            <img src="img/proto1.png" class="rounded-circle w-100 mb-0" />
+                            <h3 class="fs-5">Joven Rockero</h3>
                             <p>Esta obsesionado con el rock de los 70 y 80 piensa que ahi fueron los años dorados de la música y quiere rescatar todo lo que puede de esa epoca.</p>
                         </div>
                         <div class="col-sm-4 text-center">
                             <img src="img/proto2.png" class="rounded-circle w-100 mb-3" />
-                            <h4 class="fs-5">Fan Promedio</h4>
-                            <p>Siente una deuda que espera poder saldar teniendo muchas experiencias de rock, KISS es la que más le atrae, ya que es diferente y existe mucho por explorar.</p>
+                            <h3 class="fs-5">Fan Promedio</h3>
+                            <p>Siente una deuda que espera poder saldar teniendo muchas experiencias de rock, KISS es la que más le atrae, ya que es diferente y existe por explorar.</p>
                         </div>
                         <div class="col-sm-4 text-center">
-                            <img src="img/proto3.png" class="rounded-circle w-100 mb-3" />
-                            <h4 class="fs-5">Fan Experto</h4>
+                            <img src="img/proto3.png" class="rounded-circle w-100 mb-2" />
+                            <h3 class="fs-5">Fan Experto</h3>
                             <p>Es rockero de toda la vida, conocio a kiss de chico y lo sigue de toda la vida. Tiene una coleccion, libros y experiencia, asiste a cada concierto que puede.</p>
                         </div>
                     </div>
@@ -71,13 +75,13 @@
 
                     <h3 class="text-center mt-5 mb-4">Boceto de portada</h3>
 
-                    <img src="img/boceto.png" class="w-100 d-md-none" alt="Boceto de portada en pantalla chica" />
-                    <img src="img/boceto-lg.png" class="w-100 d-none d-md-block" alt="Boceto de portada en pantalla grande" />
+                    <img src="img/ux-s1.png" class="w-100 d-md-none" alt="Boceto de portada en pantalla chica" />
+                    <img src="img/ux1.png" class="w-100 d-none d-md-block" alt="Boceto de portada en pantalla grande" />
 
                     <h3 class="text-center mt-5 mb-4">Boceto de página interior</h3>
 
-                    <img src="img/boceto.png" class="w-100 d-md-none" alt="Boceto de página interior en pantalla chica" />
-                    <img src="img/boceto-lg.png" class="w-100 d-none d-md-block" alt="Boceto de página interior en pantalla grande" />
+                    <img src="img/uxi-s1.png" class="w-100 d-md-none" alt="Boceto de página interior en pantalla chica" />
+                    <img src="img/uxi1.png" class="w-100 d-none d-md-block" alt="Boceto de página interior en pantalla grande" />
                 </div>
             </div>
         </main>
@@ -87,13 +91,11 @@
                 <div class="col-sm-11 mx-auto py-3">
                     <!--LA PALETA CROMÁTICA-->
                     <h3 class="text-center">Definiciones Cromáticas</h3>
-                    <!--Esto se define más abajo, en línea 148-->
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 20" class="shadow-sm my-3">
                         <g id="colores"></g>
                     </svg>
-                    <p class="mx-5">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et leo convallis, dictum erat nec, gravida dolor. Pellentesque maximus augue velit, ultricies dapibus ex sagittis non. Suspendisse eget justo nec dui
-                        porta consectetur non in metus. Nunc lacus lacus, iaculis fermentum auctor quis, efficitur vel felis.
+                    <p class="mx-5 text-center">
+                        Los colores se eligen acorde a la línea gráfica del grupo siendo lo primordial el rojo, negro y amarillo asemejando al estilo de llamas y oscuro debido al vinculo con el entorno rockero. Además se acoplan colores intermedio que es el naranjo, morado y gris oscuro en referencia a la etapa inicial de la banda con efectos de luces y puesta en escenas de tonos purpuras y destellos
                     </p>
                     <!--LAS FUENTES TIPOGRÁFICAS-->
                     <h3 class="text-center pt-5 pb-1">Definiciones Tipográficas</h3>
@@ -102,10 +104,10 @@
                         <!--https://fonts.google.com/ -->
                         <div class="col-md-6">
                             <div class="card shadow-sm">
-                                <img src="img/tipo-1.jpg" class="card-img-top" alt="Nombre de la tipo" />
+                                <img src="img/raleway2.jpg" class="card-img-top" alt="Raleway" />
                                 <div class="card-body">
-                                    <h4 class="card-title">NOMBRE DE LA TIPO</h4>
-                                    <p class="card-text">Descripción "estética" de la tipografía e indicaciones sobre uso (títulos, texto, notas al margen, etc.)</p>
+                                    <h4 class="card-title">Raleway Bold</h4>
+                                    <p class="card-text">Raleway se elige para su uso en menú, botones, títulos, subtítulos y similares por su fortaleza y peso en la familia tipografica con una actitud y modernidad que permite entregar una sensación rockera y al mismo tiempo moderna.</p>
                                 </div>
                             </div>
                         </div>
@@ -113,10 +115,10 @@
                         <!--https://fonts.google.com/ -->
                         <div class="col-md-6">
                             <div class="card shadow-sm">
-                                <img src="img/tipo-2.jpg" class="card-img-top" alt="Nombre de la tipo" />
+                                <img src="img/lato3.jpg" class="card-img-top" alt="Lato" />
                                 <div class="card-body">
-                                    <h4 class="card-title">NOMBRE DE LA TIPO</h4>
-                                    <p class="card-text">Descripción "estética" de la tipografía e indicaciones sobre uso (títulos, texto, notas al margen, etc.)</p>
+                                    <h4 class="card-title">Lato Thin</h4>
+                                    <p class="card-text">Lato es una gran familia tipografica de gran legibilidad de palo seco que entrerga una funcionalidad para textos en variadas dimensiones.</p>
                                 </div>
                             </div>
                         </div>
