--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Web Kissin' Chile - reúne la experiencia de kisseros en Chile" />
+        <meta name="description" content="Web Kissin' Chile - reúne la experiencia de kisseros en Chile">
+        <meta name="image" content="https://github.com/Rama2432/DNO-final/blob/main/assets/img2/Logometa.jpg?raw=true">
         <meta name="author" content="JR" />
+        <meta itemprop="name" content="KISSIN' CHILE">
+        <meta itemprop="description" content="Web Kissin' Chile - reúne la experiencia de kisseros en Chile">
+        <meta itemprop="image" content="https://github.com/Rama2432/DNO-final/blob/main/assets/img2/Logometa.jpg?raw=true">
+        <meta name="og:title" content="KISSIN' CHILE">
+        <meta name="og:description" content="Web Kissin' Chile - reúne la experiencia de kisseros en Chile">
+        <meta name="og:type" content="website"> 
         <title>KISSIN' CHILE</title>
         <link rel="icon" type="image/x-icon" href="assets/kissicon.ico" />
 
@@ -13,7 +20,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&family=Raleway:wght@700;900&display=swap" rel="stylesheet">
 
         <link href="css/styles.css" rel="stylesheet" />
+
     </head>
+
     <body id="page-top">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
@@ -39,7 +48,7 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Vive la espera Kissera</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5 text-white">Informate de programas, videos y más acá.</h2>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5 text-white">Infórmate de programas, videos y más acá.</h2>
                         <a class="btn btn-danger" href="#about">Saber más</a>
                     </div>
                 </div>
@@ -53,7 +62,7 @@
                     <div class="col-lg-6 mt-5">
                         <h2 class="text-white mb-6">Experiencia Kissera</h2>
                         <p class="text-white-50">
-                            Después de una larga espera ya es oficial la fecha del END OF THE ROAD, el momento de despedir a nuestros heroes. Por toda la ansiedad, incertidumbre y ganas que llegue la fecha es que surge esta iniciativa para informar de todas las actividades, programas y notificias del army en la espera al concierto. No te pierdas de nada.   <br>                      
+                            Después de una larga espera ya es oficial la fecha del END OF THE ROAD, el momento de despedir a nuestros héroes. Por toda la ansiedad, incertidumbre y ganas que llegue la fecha es que surge esta iniciativa para informar de todas las actividades, programas y notificas del ARMY en la espera al concierto. No te pierdas de nada.   <br>                      
                         </p>
                     </div>
                     <div class="col-lg-6">
@@ -66,15 +75,15 @@
         <!-- Proyectos-->
         <section class="projects-section" id="projects">
             <div class="container px-4 px-lg-5">
-                <h1 class="pb-4 text-white">PROYECTOS</h1>
+                <h1 class="pb-4 text-white">PROYECTOS KISSEROS</h1>
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img2/kissin_chile.png" alt="Foto del programa de Youtube Kissin Chile" /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">KISSIN' CHILE [Programa]</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                    <h4 class="text-white">KISSIN' CHILE [Programa/libro]</h4>
+                                    <p class="mb-0 text-white-50">Conversaciones entre kisseros, para hablar de nuestra banda favorita y compartir ideas, visiones y experiencias....</p>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
@@ -89,7 +98,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">SEEYOUTONITE</h4>
-                                    <p class="mb-0 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at tincidunt dolor, nec tristique justo. Morbi ut metus eu orci aliquet ultricies vitae ac odio.</p>
+                                    <p class="mb-0 text-white-50">Programa de TV Independiente, dedicado a la cultura KISSera en Chile y el mundo. Destacamos a todos quienes aporten algo que promueva a KISS y a los buenos fans de la banda más caliente del mundo.</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
@@ -104,7 +113,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">KISS ARMY CHILE</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                    <p class="mb-0 text-white-50">Agrupación oficial de kisseros en Chile promoviendo el mensaje kissero compartiendo fotos, información y videos.</p>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
@@ -119,7 +128,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">KISS REMADE CHILE</h4>
-                                    <p class="mb-0 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at tincidunt dolor, nec tristique justo. Morbi ut metus eu orci aliquet ultricies vitae ac odio.</p>
+                                    <p class="mb-0 text-white-50">Este es una banda que pretende darle un sonido más fresco y actual a discos de Kiss. This is a band that pretend to give a newer and current sound to Kiss records.</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
@@ -156,7 +165,7 @@
                                 <div class="col-auto"><button class="btn btn-danger disabled" id="submitButton" type="submit">Suscribirme</button></div>
                             </div>
                             <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:required">Es necesario un email.</div>
-                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:email">El email no es valido.</div>
+                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:email">El email no es válido.</div>
                             <!-- Mensaje de exito-->
                             <div class="d-none" id="submitSuccessMessage">
                                 <div class="text-center mb-3 mt-2 text-white">
